# nokia-jam-2025

./: README.md  build.sh  index.html  pyxel-test.py  pyxel-test.pyxapp
bevy-test/: Cargo.toml
bevy-test/src/: main.rs
chuot-test/: Cargo.toml
chuot-test/assets/: font.ron
chuot-test/src/: main.rs
macroquad-test/: Cargo.toml
macroquad-test/src/: main.rs
pyxel-test/: pyxel-test.py  waveforms.py
the-grind-2025/: constants.py  game_state.py  input.py  main.py  misc_types.py  screens.py  sound.py  the-grind-2025.html  the-grind-2025.pyxapp  ui.py
the-grind-2025/assets/: images.pyxres  simple-6px-alt.bdf  simple-6px.bdf  simple-font-6px-alt.kbitx  simple-font-6px.kbitx
the-grind-2025/assets/palettes/: NOTE  gray.pyxpal  harsh.pyxpal  original.pyxpal
the-grind-2025/scenario/: __init__.py  haunted_mansion.py  investigation_test.py  power_plant.py  theatre.py  tools.py  tutorial.py
the-grind-2025/screen/: __init__.py  base.py  case_menu.py  confirmation.py  deduction.py  deduction_end.py  endings.py  game_over.py  investigation.py  item.py  lore.py  search_menu.py  settings.py  smart_text.py  story.py  title.py  transition.py  victory.py  word_menu.py
