[package]
name = "chuot-test"
version = "0.1.0"
edition = "2021"

[dependencies.chuot]
#version = "0.3"
git = "https://github.com/tversteeg/chuot.git"
branch = "main"
default-features = false
features = ["embed-assets"] # enable only for WASM: clean build is needed to update embedded assets

[dependencies]
phf = "0.11"
glam = "0.29"